--- a/index.html
+++ b/index.html
@@ -71,6 +71,12 @@
         <div class="card-title">Mapa de Análise por Conta</div>
         <div class="card-desc">Dashboard contábil detalhado.</div>
       </a>
+
+      <!-- NOVO CARD -->
+      <a class="card" href="Relatório de Manutenção do Poço.html">
+        <div class="card-title">Relatório de Manutenção do Poço</div>
+        <div class="card-desc">Registro das manutenções e ocorrências do poço.</div>
+      </a>
     </div>
   </div>
 </body>
